# CommonAlgorithm

./: .clang-format  .gitignore  README.md
CreationalDesignPattern/Builder/2_GroovyStyleBuilder/: GroovyStyleBuilder.cpp
CreationalDesignPattern/Builder/4_Exercices/: main.cpp
CreationalDesignPattern/Factory/2_Factory/: Factory.cpp
CreationalDesignPattern/Factory/3_InnerFactory/: InnerFactory.cpp
CreationalDesignPattern/Factory/4_AbstractFactory/: CoffeeFactory.hpp  DrinkFactory.hpp  HotDrinkFactory.hpp  TeaFactory.hpp
CreationalDesignPattern/Factory/5_Exercices/: correction.cpp
CreationalDesignPattern/Prototype/1_Prototype/: Prototype.cpp
CreationalDesignPattern/Singleton/4_Exercices/: correction.cpp
DesignPattern/0_SOLID/InterfaceSegregationPrinciple/: ISP.cpp
DesignPattern/0_SOLID/OpenClosedPrinciple/: OCP.cpp
SOLID/DependencyInversionPrinciple/: DIP.cpp
SOLID/LiskovSubstitutionPrinciple/: LSP.cpp
SOLID/SingleResponsibilityPrinciple/: SRP.cpp
Sorts/: CMakeLists.txt  main.cpp
Sorts/BubbleSort/: BubbleSort.hpp  BubbleSort.ipp
Sorts/InsertionSort/: InsertionSort.hpp  InsertionSort.ipp
Sorts/QuickSort/: CMakeLists.txt  ParallelQuickSort.cpp  ParallelQuickSort.hpp  ParallelQuickSort.ipp  QuickSort.hpp  QuickSort.ipp
StructuralDesignPattern/Adapter/1_AdapterVisual/: AdapterVisual.sln  (+1 more)
Test/: CMakeLists.txt  Config.cpp  Config.hpp  config.ini  main.cpp  script1.sh
Test/Client/: CMakeLists.txt  ClientDataManagerInterface.cpp
Test/Server/: CMakeLists.txt  IDataManager.hpp  IUNIXServer.hpp  Packet.hpp  ServerDataManagerInterface.cpp
(+93 files in other folders)
